<resources>
    <string name="app_name">GPS Compass</string>
    <string name="heading_label">Heading</string>
    <string name="direction_value_placeholder">0°</string>
    <string name="direction_value_format">%1$d°</string>
    <string name="altitude_label">Altitude</string>
    <string name="speed_label">Speed</string>
    <string name="last_fix_label">Last GPS fix</string>
    <string name="last_fix_unknown">Waiting for GPS…</string>
    <string name="value_placeholder">--</string>
    <string name="altitude_value_format">%1$.1f %2$s</string>
    <string name="speed_value_format">%1$.1f %2$s</string>
    <string name="last_fix_value_format">%1$d s ago</string>
    <string name="permission_rationale">Location permission is required to access GPS data.</string>
    <string name="permission_denied">Location permission denied. Enable it in settings.</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="units_altitude_title">Altitude units</string>
    <string name="units_speed_title">Speed units</string>
    <string name="language_title">Language</string>
    <string name="unit_meters">meters</string>
    <string name="unit_feet">feet</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mph</string>
    <string name="unit_mps">m/s</string>
    <string name="unit_knots">knots</string>
    <string name="language_system_default">System default</string>
    <string name="language_english">English</string>
    <string name="language_chinese_simplified">简体中文</string>
    <string name="language_spanish">Español</string>
    <string name="language_french">Français</string>
    <string name="language_hindi">हिन्दी</string>
    <string name="compass_center_placeholder">0°</string>
</resources>
